syntax = "proto3";

package notifications;

import "protobuf/common.proto";
import "protobuf/sync.proto";

message WireNetworkChangeEvent {
  // Account identifier.
  bytes account_id = 1;
  // Connection identifier.
  string connection_id = 2;
  // Root commit of the account status.
  common.WireCommitHash root = 3;
  // Merge outcome information.
  sync.WireMergeOutcome outcome = 4;
}
